--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -2,59 +2,87 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginHorizontal="20dp"
     android:layout_marginTop="15dp"
     app:cardElevation="4dp"
-    app:cardCornerRadius="10dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    app:cardCornerRadius="8dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_width="190dp"
+    android:layout_height="180dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:paddingBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/iv_preview"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/image_test"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <View
+            android:background="@drawable/background_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_clock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_clock"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nunito_bold"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:layout_marginStart="5dp"
+            tools:text="50 мин"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_clock"
+            app:layout_constraintStart_toEndOf="@+id/iv_clock"
+            app:layout_constraintTop_toTopOf="@+id/iv_clock" />
+
+        <TextView
             android:id="@+id/tv_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:fontFamily="@font/nunito_bold"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:layout_margin="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/iv_clock"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_preview"
-            tools:text="Шаурма вкуснейшая" />
+            app:layout_constraintStart_toStartOf="@+id/iv_preview"
+            tools:text="Картошка в сливочном соусе" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_time"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/tv_name"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name"
-            tools:text="Время: 2 часа" />
-
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/tv_category"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/tv_time"
-            app:layout_constraintTop_toBottomOf="@+id/tv_time"
-            tools:text="Мучное изделия" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_count_portions"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/tv_category"
-            app:layout_constraintTop_toBottomOf="@+id/tv_category"
-            tools:text="Кол-во порций:" />
+            android:fontFamily="@font/nunito_medium"
+            android:textColor="@color/black"
+            android:background="@drawable/background_category"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="2dp"
+            tools:text="Супы"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
