--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -6,7 +6,7 @@
     app:cardElevation="4dp"
     app:cardCornerRadius="8dp"
     android:layout_marginHorizontal="10dp"
-    android:layout_width="190dp"
+    android:layout_width="match_parent"
     android:layout_height="180dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/image_test"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +48,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_bold"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:layout_marginStart="5dp"
             tools:text="50 мин"
             app:layout_constraintBottom_toBottomOf="@+id/iv_clock"
@@ -62,7 +61,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_bold"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:layout_margin="10dp"
             app:layout_constraintBottom_toTopOf="@+id/iv_clock"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,15 +72,29 @@
             android:id="@+id/tv_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/nunito_medium"
-            android:textColor="@color/black"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/background_category"
+            android:fontFamily="@font/nunito_medium"
+            android:gravity="start"
             android:paddingHorizontal="10dp"
             android:paddingVertical="2dp"
-            tools:text="Супы"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Супы" />
+
+        <ImageButton
+            android:id="@+id/btn_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/icon_favorite_disable"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/transparent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
