--- a/app/src/main/res/layout/item_step_recipe.xml
+++ b/app/src/main/res/layout/item_step_recipe.xml
@@ -1,6 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <TextView
+        android:id="@+id/tv_number_step"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nunito_medium"
+        android:textColor="@color/black"
+        android:textSize="14dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="1. " />
+
+    <TextView
+        android:id="@+id/tv_text_recipe"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nunito_medium"
+        android:textColor="@color/black"
+        android:textSize="14dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_number_step"
+        app:layout_constraintTop_toTopOf="@+id/tv_number_step"
+        tools:text="Нарежьте репчатый лук мелкими кубиками, затем ошпарьте кипятком, сполосните холодной водой, жидкость слейте. Так лук уже не будет сильно горьким." />
+
+    <ImageView
+        android:id="@+id/iv_preview_recipe"
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="16:9"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_text_recipe"
+        app:layout_constraintStart_toStartOf="@+id/tv_text_recipe"
+        app:layout_constraintTop_toBottomOf="@+id/tv_text_recipe" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
