--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:fontFamily="@font/nunito_medium"
         android:hint="Борщ"
         android:paddingStart="10dp"
+        android:inputType="textFilter"
         android:textColor="@color/black"
         android:textSize="16dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_favorite_recipes"
