--- a/app/src/main/res/layout/item_step_recipe.xml
+++ b/app/src/main/res/layout/item_step_recipe.xml
@@ -33,9 +33,10 @@
 
     <ImageView
         android:id="@+id/iv_preview_recipe"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="@+id/tv_text_recipe"
         app:layout_constraintStart_toStartOf="@+id/tv_text_recipe"
         app:layout_constraintTop_toBottomOf="@+id/tv_text_recipe" />
