--- a/app/src/main/res/layout/fragment_ingridients.xml
+++ b/app/src/main/res/layout/fragment_ingridients.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:overScrollMode="never"
+    android:layout_weight="1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:listitem="@layout/item_ingr"
