--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,28 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.RecipeGroove" parent="Theme.Material3.Light">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="android:statusBarColor">#DF4242</item>
-        <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
+
+        <item name="android:statusBarColor">@color/red</item>
+
     </style>
 
-    <style name="Widget.App.Toolbar" parent="Widget.AppCompat.Toolbar">
-        <item name="android:background">@color/white</item>
-        <item name="android:elevation">4dp</item>
-        <item name="titleTextAppearance">@style/ToolbarTitleText</item>
+    <style name="sw_bottom_menu">
+        <item name="fontFamily">@font/nunito_medium</item>
+        <item name="android:textSize">12sp</item>
     </style>
-
-    <style name="ToolbarTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">18dp</item>
-        <item name="android:text">Загрузка...</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:maxLength">30</item>
-        <item name="android:fontFamily">@font/nunito_bold</item>
-        <item name="android:gravity">center</item>
-    </style>
-
 
     <style name="Theme.RecipeGroove" parent="Base.Theme.RecipeGroove" />
 
@@ -34,7 +21,6 @@
 
     <style name="TabLayout">
         <item name="tabMode">fixed</item>
-<!--        <item name="tabIndicator">@drawable/background_tab_indicator</item>-->
         <item name="tabIndicatorColor">@color/black</item>
         <item name="tabRippleColor">@color/white</item>
         <item name="tabTextAppearance">@style/TextTabLayoutProfile</item>
