MainFragment переведен на TabsFragment

--- a/app/src/main/res/navigation/category_navigation.xml
+++ b/app/src/main/res/navigation/category_navigation.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/categoryFragment"
-        android:name="ru.topbun.recipes.presentation.main.category.CategoryFragment"
+        android:name="ru.topbun.recipes.presentation.tabs.category.CategoryFragment"
         android:label="CategoryFragment" />
 </navigation>
