--- a/app/src/main/res/layout/fragment_tabs.xml
+++ b/app/src/main/res/layout/fragment_tabs.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.main.MainFragment">
+    tools:context=".presentation.tabs.TabsFragment">
 
     <fragment
         android:id="@+id/bottom_fragment_container"
